fix app spacing

--- a/src/App.sass
+++ b/src/App.sass
@@ -3,8 +3,11 @@
 
 .App
   display: flex
-  justify-content: center
-  align-items: center
+  height: 100vh
+
+  .container
+    margin: auto
+    padding: 3rem 1rem
 
   #coin-grid-header
     color: $primary
